examples/error/NoMain.c
int funzione(int c)
{	int a;
	float b;
	bool bRet;
	bool ab;
	bool bb;
	string c;
	
	a = 2;
	
	while(true)
	{
		int c;
		c="cia";
		if(true)
		{
			float c;
			c="cosa";
		}
	}
		
	while(false)
	{
		string c;
		c=2;
	}
	
	c=5;
	
	return a; 	
	
}
